--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel = "stylesheet" href="style.css"/> 
       <title>My Portfolio Website</title>
     </head>
     <body>
-        <h1>Hi, I am Pema Lama.</h1>
-        <p> I am an aspiring Software Engineer</p>
+        <script src="script.js"></script>
+        <nav id="nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Contact me</a></li>
+            </ul>
+        </nav>
+        <div id="homepage">
+            <img src="https://i.ibb.co/C5Vj6NR/circle-cropped.png" alt="circle-cropped" border="0"/>
+             <h1>Hi, I am Pema Lama.</h1>
+             <p> I am an aspiring Software Engineer</p>
+        </div>
     </body>
 </html>
