--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
         <script src="script.js"></script>
         <nav id="nav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
                 <li><a href="#">Contact me</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Home</a></li>   
             </ul>
         </nav>
-        <div id="homepage">
-            <img src="https://i.ibb.co/C5Vj6NR/circle-cropped.png" alt="circle-cropped" border="0"/>
-             <h1>Hi, I am Pema Lama.</h1>
-             <p> I am an aspiring Software Engineer</p>
+        
+        <div class="homepage">
+            <img src="https://i.ibb.co/C5Vj6NR/circle-cropped.png" alt="circle-cropped"/>
+            <div id="intro">
+            <h1>Hi, I am Pema Lama.</h1>
+             <p> I am an aspiring Software Engineer.</p>
+            </div>
         </div>
     </body>
 </html>
